Avoid memoization in Java 17
See https://github.com/qupath/qupath/issues/957

This commit turns memoization off by default when using Java 17+. This behavior can be overridden adding
```
  java-options=-Dqupath.bioformats.allow.memoization=true
```
to the QuPath.cfg file (i.e. set the system property). But it probably won't help with Bio-Formats <= 6.9.1 since memoization doesn't work because of JEP 403.